2007-01-14  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/fvwm.1.in:
	* fvwm/style.c (style_parse_one_style_option):
	deprecated some "No..." styles

	* fvwm/add_window.c (GetWindowSizeHints):
	use the resize_inc hint even with the ResizeHintOverride style

	* fvwm/icons.c (DeIconify):
	corrected previous fix

	* fvwm/placement.c (CleverPlacement):
	(SmartPlacement):
	(__place_get_wm_pos):
	(__place_get_nowm_pos):
	(__place_window):
	fixed smart placement
	unified placement func interface

2007-01-14  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/icons.c (DeIconify):
	don't loop forever.

	* fvwm/stack.c (is_transient_subtree_stacked_straight):
	fix detection of non needed lower operations
	(__restack_window):
	BroadcastRestack to modules even if non is done. (To cancel effect of
	already sent M_RAISE/M_LOWER)
	don't do raise hacks if no restack was done.

	* fvwm/fvwm.h (FvwmWindow):
	icon_nalloc_pixels is int instead of unsined int

	* libs/PictureUtils.h (PictureCloseImageColorAllocator):
	* libs/PictureUtils.c (PictureCloseImageColorAllocator):
	use int instead of unsigned int.

	* fvwm/menugeometry.c (menu_get_geometry)
	(menu_get_outer_geometry):
	* fvwm/focus.c (CMD_WarpToWindow):
	* fvwm/geometry.c (get_title_button_geometry):
	* fvwm/session.c (SaveWindowStates):
	* fvwm/conditional.c (CMD_WindowId):
	* fvwm/placement.c (__place_get_wm_pos):
	* fvwm/frame.c (frame_create_move_resize_args):
	* fvwm/icons.c (GetIconBitmap, GetIconWindow):
	* fvwm/add_window.c (CaptureOneWindow, AddWindow):
	* fvwm/builtins.c (CMD_Destroy, CMD_Close):
	* fvwm/style.c (style_parse_icon_box_style):
	* fvwm/move_resize.c (resize_move_window, InteractiveMove)
	(AnimatedMoveAnyWindow, __move_window, __move_loop)
	(__resize_window):
	* fvwm/events.c (HandlePropertyNotify)
	(__is_bpress_window_handled):
	* fvwm/menus.c (paint_menu_gradient_background, pop_menu_up)
	(get_menu_options):
	fix geometry signed pointer warnings
