@@ -5,7 +5,8 @@
 	deprecated some "No..." styles
 
 	* fvwm/add_window.c (GetWindowSizeHints):
-	use the resize_inc hint even with the ResizeHintOverride style
+	only ignore the min_width/min_height/max_width/max_height with the
+	ResizeHintOverride style
 
 	* fvwm/icons.c (DeIconify):
 	corrected previous fix
